manifests/parts_deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: car-parts-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: car-mod
  template:
    metadata:
      labels:
        app: car-mod
    spec:
      containers:
        - name: car-parts-container
          image: 487383300987.dkr.ecr.us-east-1.amazonaws.com/test:latest
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
