manifests/parts_service.yml
apiVersion: v1
kind: Service
metadata:
  name: car-parts-service
spec:
  selector:
    app: car-mod
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
