manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  name: car-mod-service
spec:
  selector:
    app: car-mod
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 9000
  - name: https
    protocol: TCP
    port: 443
    targetPort: 9000
  type: ClusterIP
