manifests/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: car-mod-ingress
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/ssl-redirect: '443'
spec:
  ingressClassName: alb
  rules:
  - host: vj.klizos.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: car-mod-service
            port:
              number: 80
      - path: /parts
        pathType: Prefix
        backend:
          service:
            name: car-parts-service
            port:
              number: 80
